Fix post deployment layout issues

--- a/style.scss
+++ b/style.scss
@@ -43,7 +43,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: start;
-  padding-top: 10rem;
+  padding-top: 7rem;
   align-items: center;
 
   //Background "Nighttime Fog" Effect
